--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.milojevicjovana.com/style.css" />
   <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 </head>
 
@@ -22,7 +22,7 @@
           <div class="Navbar__Link-brand col-xl-3 col-xs-5">
             <div class="my_logo navbar-brand Navbar__Link-toggle ">
               <a class="navbar-brand" href="#">
-                <img src="images/my_logo.png" width="150px;" /></a>
+                <img src="https://www.milojevicjovana.com/images/my_logo.png" width="150px;" /></a>
             </div>
           </div>
           <nav class="Navbar__Items col-xl-6">
@@ -40,8 +40,8 @@
             </div>
           </nav>
           <div class="Navbar__Link col-xl-3">
-            <a href="images/Milojevic-Jovana-CV.pdf" download="Milojevic-Jovana-CV"><button
-                class="btn resumeBtn btn-dark">resume</button> </a>
+            <a href="https://www.milojevicjovana.com/images/Milojevic-Jovana-CV.pdf"
+              download="Milojevic-Jovana-CV"><button class="btn resumeBtn btn-dark">resume</button> </a>
           </div>
         </div>
       </section>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="photo col-xs-6 col-xl-6">
-          <img src="images/cv-photo.png" width="280px" />
+          <img src="https://www.milojevicjovana.com/images/cv-photo.png" width="280px" />
         </div>
 
       </div>
@@ -146,7 +146,7 @@
             </p>
           </div>
           <div class="column col-lg-11 col-sx-7">
-            <img class="skills" src="images/skills.png" width="80%" /> </div>
+            <img class="skills" src="https://www.milojevicjovana.com/images/skills.png" width="80%" /> </div>
         </div>
       </section>
       <!-- end of skill part -->
@@ -182,29 +182,18 @@
             <div class="contactForm containerBlack">
               <h3>CONTACT FORM</h3>
 
-              <form action="https://send.pageclip.co/YzilRDKoR2oPpXiggcaEItikyUfkVzze" class="pageclip-form"
-                method="post">
+              <form action="https://send.pageclip.co/api_Wlrp1zJATYZmhR2X2AmOUjBeJ5rMuTpQ/contact-form"
+                class="pageclip-form" method="post">
                 <!-- Replace these inputs with your own. Make sure they have a "name" attribute! -->
-                <input type="text" class="form-control" name="user_name" id="" placeholder="Your name" />
-                <input type="tel" class="form-control" name="user_phone" id="" placeholder="Your phone" />
-                <input type="email" class="form-control" name="user_email" id="" placeholder="Your e-mail" />
-                <input type="text" class="form-control" name="message" id="" placeholder="Your message" />
-
-
+                <input type="text" class="form-control" name="user_name" placeholder="Your name" required />
+                <input type="tel" class="form-control" name="user_phone" placeholder="Your phone" />
+                <input type="email" class="form-control" name="user_email" placeholder="Your e-mail" required />
+                <input type="text" class="form-control" name="message" placeholder="Your message" required />
                 <!-- This button will have a loading spinner. Keep the inner span for best results. -->
                 <button type="submit" class="btn sendBtn btn-dark pageclip-form__submit">
-                  SEND
+                  <span>SEND</span>
                 </button>
               </form>
-              <div id="contact-form">
-                <form action="https://formspree.io/mvognezl" method="post" name="myemailform" enctype="text/plain">
-                  <input type="text" class="form-control" name="user_name" id="" placeholder="Your name" />
-                  <input type="tel" class="form-control" name="user_phone" id="" placeholder="Your phone" />
-                  <input type="email" class="form-control" name="user_email" id="" placeholder="Your e-mail" />
-                  <input type="text" class="form-control" name="message" id="" placeholder="Your message" />
-                </form>
-              </div>
-              <button class="btn sendBtn btn-dark" type="submit">SEND</button>
             </div>
           </div>
         </div>
@@ -231,7 +220,6 @@
 
   <!-- FLATICON LINK -->
   <script src="https://kit.fontawesome.com/e1d54cac1a.js" crossorigin="anonymous"></script>
-  <script src="navbar.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -248,14 +236,16 @@
       emailjs.init('user_Dj0LJWxQ0nlWoFfOXPcDm');
     })();
   </script>
-  <script>window.onload = function () {
-      document.getElementById('contact-form').addEventListener('submit', function (event) {
-        event.preventDefault();
-        // generate the contact number value
-        this.contact_number.value = Math.random() * 100000 | 0;
-        emailjs.sendForm('gmail', 'contactFormMilojevicDesignCV', this);
-      });
-    }</script>
+  <script type="text/javascript" src="https://www.milojevicjovana.com/contactForm.js">
+  // window.onload = function () {
+  //     document.getElementById('contact-form').addEventListener('submit', function (event) {
+  //       event.preventDefault();
+  //       // generate the contact number value
+  //       this.contact_number.value = Math.random() * 100000 | 0;
+  //       emailjs.sendForm('gmail', 'contactFormMilojevicDesignCV', this);
+  //     });
+  //   }
+  </script>
   <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 
