--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="top w3-panel">
             <div class="row">
-                <a href="#" class="navbar-brand w3-col s5 l6">
+                <a href="#milojevicjovana.com" class="navbar-brand w3-col s5 l6">
                     <img src="images/my_logo.png" width="170px;" /></a>
                 <span class="navItems">
                     <a href="#me" class="w3-bar-item w3-button w3-mobile w3-hide-small">me</a>
@@ -214,6 +214,16 @@
             }
         }
     </script>
+    <script type="text/javascript" src="contactForm.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
