--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
 
             <div id="demo" class="navItemsHid w3-bar-block w3-hide w3-hide-large w3-hide-medium">
-                <a href="#" class="w3-bar-item w3-button">me</a>
-                <a href="#" class="w3-bar-item w3-button">my journey</a>
-                <a href="#" class="w3-bar-item w3-button">my skills</a>
-                <a href="#" class="w3-bar-item w3-button">contact</a>
+                <a href="#me" class="w3-bar-item w3-button">me</a>
+                <a href="#my_journey" class="w3-bar-item w3-button">my journey</a>
+                <a href="#my_skills" class="w3-bar-item w3-button">my skills</a>
+                <a href="#contact" class="w3-bar-item w3-button">contact</a>
             </div>
 
         </div>
